Added a basic example Phaser game

--- a/server/index.htm
+++ b/server/index.htm
@@ -8,6 +8,7 @@
 </head>
 <body>
   <canvas id="canvas">Sadly :( your browser doesn't support the game</canvas>
+  <script src="phaser.min.js"></script>
   <script src="main-game.js"></script>
 </body>
 </html>
