--- a/server/index.htm
+++ b/server/index.htm
@@ -5,9 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kajam - Replit Game Jam (CHANGE TITLE)</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      overflow: hidden;
+    }
+  </style>
 </head>
 <body>
-  <canvas id="canvas">Sadly :( your browser doesn't support the game</canvas>
+  <noscript>Sadly :( your browser doesn't support the game</noscript>
+	<!-- <canvas id="canvas">Sadly :( your browser doesn't support the game</canvas> -->
   <script src="phaser.min.js"></script>
   <script src="main-game.js"></script>
 </body>
