created platform and player, camera follows player.

--- a/server/index.htm
+++ b/server/index.htm
@@ -19,7 +19,6 @@
 <body>
   <noscript>Sadly :( your browser doesn't support the game</noscript>
 	<!-- <canvas id="canvas">Sadly :( your browser doesn't support the game</canvas> -->
-  <script src="phaser.min.js"></script>
-  <script src="main-game.js"></script>
+  <script src="static/main-game.js"></script>
 </body>
 </html>
