--- a/server/index.htm
+++ b/server/index.htm
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kajam - Replit Game Jam (CHANGE TITLE)</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      overflow: hidden;
-    }
-  </style>
-</head>
-<body>
-  <noscript>Sadly :( your browser doesn't support the game</noscript>
-	<!-- <canvas id="canvas">Sadly :( your browser doesn't support the game</canvas> -->
-  <script src="static/main-game.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kajam - Replit Game Jam (CHANGE TITLE)</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        overflow: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <noscript>Sadly :( your browser doesn't support the game</noscript>
+    <!-- <canvas id="canvas">Sadly :( your browser doesn't support the game</canvas> -->
+    <script src="static/main-game.js"></script>
+  </body>
 </html>
