Joystick probaby works now

--- a/server/index.htm
+++ b/server/index.htm
@@ -12,7 +12,13 @@
         box-sizing: border-box;
       }
       body {
-        overflow: hidden;
+       /* overflow: hidden; */
+      }
+      
+      canvas {
+        position: fixed;
+        top: 0;
+        left: 0;
       }
     </style>
   </head>
