--- a/server/index.htm
+++ b/server/index.htm
@@ -19,6 +19,7 @@
         position: fixed;
         top: 0;
         left: 0;
+        touch-action: none!important;
       }
     </style>
   </head>
